Fixed type info__blurb to wrap correctly.

--- a/client/src/app/components/capacitor-form/capacitor-form.component.css
+++ b/client/src/app/components/capacitor-form/capacitor-form.component.css
@@ -4,6 +4,8 @@
   font-size: 15px;
   margin-right: 15%;
   display:block;
+  position: absolute;
+  left: 750px;
 }
 
 .type__info {
